--- a/src/scss/import.scss
+++ b/src/scss/import.scss
@@ -13,5 +13,8 @@
 // cards
 @import "../blocks/cards/cards";
 
+// main-slider
+@import "../blocks/main-slider/main-slider";
+
 // media
 @import "media";
