--- a/src/blocks/cards/_cards.scss
+++ b/src/blocks/cards/_cards.scss
@@ -26,7 +26,8 @@
     width: 70%;
     img {
       width: 100%;
-      height: auto;
+      max-height: 150px;
+      object-fit: contain;
     }
   }
 
