--- a/src/blocks/cards/cards.pug
+++ b/src/blocks/cards/cards.pug
@@ -1,9 +1,9 @@
 include goods.pug
-
+//-  .col-lg-3.col-md-6.col-sm-12
 .container 
   .row
     for i in goods 
-      .col-lg-3.col-md-6.col-sm-12
+      .col-lg-3.col-md-6.col-sm-6.col-xs-12
         a(href="#" class="default-card")
           .default-card__img-wrapper
             img(src=i.img class="default-card__img")
