--- a/src/blocks/header/_header.scss
+++ b/src/blocks/header/_header.scss
@@ -2,8 +2,15 @@ header {
   padding: 50px 0;
 }
 
+.header-wrapper {
+  position: relative;
+}
+
 .logo {
+  position: relative;
+  float: left;
   z-index: 901;
+  height: 50px;
   a {
     display: block;
   }
@@ -13,11 +20,12 @@ header {
 }
 
 .header-menu {
+  float: right;
+  height: 50px;
+  line-height: 50px;
   ul {
-    // display: flex;
-    // align-items: center;
-    // justify-content: space-between;
-    float: right;
+    margin: 0;
+    padding: 0;
     li {
       display: inline-block;
       margin-right: 10px;
@@ -38,7 +46,7 @@ header {
   }
 }
 
-.header-menu__mobile__sandwich {
+.header-menu-mobile__sandwich {
   position: relative;
   float: right;
   z-index: 901;
@@ -81,17 +89,21 @@ header {
   transition-delay: 0.1s;
 }
 
-.header-menu__mobile__sandwich.active .sw-top {
+.header-menu-mobile {
+  display: none;
+}
+
+.header-menu-mobile__sandwich.active .sw-top {
   top: 4px;
   transform: rotate(140deg);
 }
 
-.header-menu__mobile__sandwich.active .sw-bottom {
+.header-menu-mobile__sandwich.active .sw-bottom {
   top: 0px;
   transform: rotate(-140deg);
 }
 
-.header-menu__mobile__sandwich.active .sw-footer {
+.header-menu-mobile__sandwich.active .sw-footer {
   opacity: 0;
   top: 0;
   transform: rotate(180deg);
@@ -105,14 +117,16 @@ header {
   height: 100%;
   z-index: 900;
   background-color: rgba(26, 31, 36, 1);
-  padding: 35% 15px 0 15px;
+  padding: 0 15px;
   transition: 0.5s;
   &.show {
     display: block;
   }
   ul {
+    position: relative;
     display: block;
     margin: 0 auto;
+    top: 150px;
     padding: 0;
     width: 100%;
     text-align: center;
