--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -1,17 +1,17 @@
 include links.pug
 
 .container
-    .row
-        .logo.col-lg-5.col-md-6.col-sm-6.col-xs-6  
+    .header-wrapper.clearfix
+        .logo
             a(href="#")
                 img(src="/img/logo.png")
-        .header-menu.col-lg-7.hidden-md.hidden-sm.hidden-xs
+        .header-menu
             ul.header-menu__nav  
                 for i in links
                     li
                         a(href=i.link class="header-menu__nav-item")=i.name
-        .header-menu__mobile.hidden-lg.col-md-6.col-sm-6.col-xs-6              
-            div(class="header-menu__mobile__sandwich js-mobile-menu-open")
+        .header-menu-mobile             
+            div(class="header-menu-mobile__sandwich js-mobile-menu-open")
                 .sw-top
                 .sw-bottom
                 .sw-footer   
