--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -12,14 +12,14 @@ html(lang="ru")
 		block meta
 			title Marshall
 			
-		link(href="//db.onlinewebfonts.com/c/2206d6cc490084998d531e8c1b2cbb4a?family=Druk+Wide+Bold" rel="stylesheet" type="text/css")
+		link(href="http://db.onlinewebfonts.com/c/2206d6cc490084998d531e8c1b2cbb4a?family=Druk+Wide+Bold" rel="stylesheet" type="text/css")
 		link(href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet")
 		link(href="./vendor/fancybox/jquery.fancybox.min.css", rel="stylesheet")
 		link(href="./vendor/bootstrap/css/bootstrap.min.css", rel="stylesheet")
 		link(href="./vendor/slick-1.8.1/slick/slick.css", rel="stylesheet")
 		link(href="./vendor/jquery/jquery-ui.css", rel="stylesheet")
 		link(href="./vendor/jquery/jquery-ui.theme.min.css", rel="stylesheet")
-		link(href="./css/main.css", rel="stylesheet")
+		link(href="./css/style.css", rel="stylesheet")
 
 	body
 		header
