--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -4,7 +4,7 @@ include links.pug
     .header-wrapper.clearfix
         .logo
             a(href="#")
-                img(src="/img/logo.png")
+                img(<img src="/img/logo.png")
         .header-menu
             ul.header-menu__nav  
                 for i in links
