--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,9 +1,10 @@
 extends ../layout.pug
 
+
 block content
 
   include ../../blocks/main-slider/main-slider.pug
-  
+
   .goods-category
     include ../../blocks/cards/cards.pug
 
@@ -11,7 +12,7 @@ block modals
   div(class="modal fade video-modal" tabindex="-1" role="dialog" aria-labelledby="videoModal" aria-hidden="true" id="js-modal-video")
     div(class="video-modal__wrapper" role="document")
       .modal-body
-        iframe(width="100%" height="100%" src="https://www.youtube.com/embed/dkNfNR1WYMY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+        iframe(width="100%" height="100%" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
 
 
         
