--- a/src/blocks/main-slider/main-slider.pug
+++ b/src/blocks/main-slider/main-slider.pug
@@ -14,20 +14,20 @@
                 | The series starts at the very beginning by explaining beats and rhythm, before moving on to cover chords, scales, song structures and much more. Best of all, it's all totally free.
               a(href="#").default-button explore
             .main-slider__video.col-lg-7.col-md-6
-              a(href="#" class="main-slider__video-play-button js-modal-video" data-toggle="modal" data-target="js-modal-video") 
-                img(src="/img/play.png")
-              img(src="/img/video_preview.png" class="main-slider__video-preview")  
+              a(href="#" class="main-slider__video-play-button js-modal-video" data-toggle="modal" data-link="https://www.youtube.com/embed/dkNfNR1WYMY" data-target="js-modal-video") 
+                img(<img src="/img/play.png")
+              img(<img src="/img/video_preview.png" class="main-slider__video-preview")  
           div
             .main-slider__desc.col-lg-5.col-md-6
               p 
                 | We’re helping you learn music theory and essential techniques to take you from beginner to pro. Whether you’ve just picked up an instrument for the first time or are looking to fill in some gaps in your playing, Making Music with Marshall has everything to give you a helping hand. 
               a(href="#").default-button explore
             .main-slider__video.col-lg-7.col-md-6
-              img(src="/img/video_preview.png" class="main-slider__video-preview")
+              img(<img src="/img/video_preview.png" class="main-slider__video-preview")
           div
             .main-slider__desc.col-lg-5.col-md-6
               p 
                 | The series starts at the very beginning by explaining beats and rhythm, before moving on to cover chords, scales, song structures and much more. Best of all, it's all totally free. 
               a(href="#").default-button explore
             .main-slider__video.col-lg-7.col-md-6
-              img(src="/img/video_preview.png" class="main-block__video-preview")
+              img(<img src="/img/video_preview.png" class="main-block__video-preview")
